# r2_bringup

./: CMakeLists.txt  package.xml  r2d2.repos
config/: dome_teleop.yaml  joystick.yaml  my_controllers.yaml
launch/: dome_teleop.launch.py  joystick.launch.py  launch_robot.launch.py  launch_zenoh_router.launch.py  rsp.launch.py
r2_bringup/: dome_twist_converter.py
urdf/: robot.urdf.xacro  ros2_control.xacro
