<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>r2_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1734595+daveismith@users.noreply.github.com">davids</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>r2_description</depend>
  <depend>joy</depend>
  <depend>teleop_twist_joy</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>twist_mux</depend>
  <depend>joint_state_publisher</depend>
  <depend>r2_web_interface</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
